--- a/settings.ui
+++ b/settings.ui
@@ -69,6 +69,9 @@
    <property name="maximum">
     <number>20</number>
    </property>
+   <property name="value">
+    <number>4</number>
+   </property>
   </widget>
  </widget>
  <resources/>
@@ -76,6 +79,22 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
+   <receiver>Settings</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>117</x>
+     <y>191</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>124</x>
+     <y>114</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
    <receiver>Settings</receiver>
    <slot>close()</slot>
    <hints>
