--- a/about.ui
+++ b/about.ui
@@ -40,8 +40,13 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPlainTextEdit" name="plainTextEdit">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
      <property name="plainText">
       <string>This is a small game: 2048.
+
+It was designed with Qt5. It's just my first step in gamedev. Everything is for fun and selfstuding.
 
 Author: Igor Klevanets
 e-mail: cerevra@gmail.com</string>
