--- a/about.ui
+++ b/about.ui
@@ -78,7 +78,7 @@ e-mail: cerevra@gmail.com</string>
          </sizepolicy>
         </property>
         <property name="text">
-         <string>OK</string>
+         <string notr="true">OK</string>
         </property>
        </widget>
       </item>
