--- a/settings.ui
+++ b/settings.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -99,7 +99,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Windows 8 (Metro)</string>
+       <string notr="true">Windows 8 (Metro)</string>
       </property>
       <property name="checked">
        <bool>false</bool>
